--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,8 +57,9 @@
 
         <service
             android:name=".fmk.UpdaterService"
-            android:enabled="false"
-            android:exported="false"></service>
+            android:enabled="true"
+            android:exported="false">
+        </service>
     </application>
 
 </manifest>
